# cregister

./: Cargo.toml  INSTRUCTIONS.md  LICENSE  README.md  barm.sh  product.csv
src/: cli.rs  lib.rs  tools.rs
src/client/: client.rs  mod.rs
src/device/: cash_register.rs  mod.rs  novitus_next.rs
src/i18n/: mod.rs
src/net/: codes.rs  error.rs  mod.rs  traits.rs
src/net/packet/: header.rs  mod.rs  product.rs  start.rs  status.rs  types.rs
src/net/protocol/: device_novitus_next.rs  device_tango.rs  frame.rs  mod.rs  tango.rs
