[package]
name = "cregister"
version = "0.1.0"
authors = ["Jakub Gradcki <jakub.gradcki@gmail.com>"]
edition = "2021"
# default-run = "cregister"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name="client"
# path="src/client.rs"

[dependencies]
encoding = "0.2" # or encoding_rs
serde={version="1.0.145", features=["derive"]}
# bincode="1.2.1"
log = {version="0.4.14", feataures = ["max_level_debug"]}
env_logger="0.9.0"
ctrlc = { version = "3.0", features = ["termination"] }
# num_enum="0.5.4"
# structopt="0.3.23"
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
chrono = "0.4"
csv = "1.1"
hyphenation="0.8.4"
clap = { version = "4.0.29", features = ["derive"] }
