[package]
name = "cregister"
version = "0.1.0"
authors = ["Jakub Gradcki <j.gradcki@moaai.com>"]
edition = "2021"
# default-run = "cregister"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name="client"
# path="src/client.rs"

[dependencies]
encoding = "0.2" # or encoding_rs
serde={version="1.0.188", features=["derive"]}
log = {version="0.4.14", feataures = ["max_level_debug"]}
env_logger="0.10.0"
ctrlc = { version = "3.0", features = ["termination"] }
chrono = "0.4.28"
csv = "1.2.2"
hyphenation="0.8.4"
clap = { version = "4.4.0", features = ["derive"] }
indicatif = "0.17.7"
